# AVG-LLaVA

./: README.md  predict.py  pyproject.toml
docs/: Customize_Component.md  Data.md  Evaluation.md  Finetune_Custom_Data.md  Intel.md  MODEL_ZOO.md
llava/: conversation.py  generate_utils.py
llava.egg-info/: PKG-INFO  requires.txt
llava/eval/: model_vqa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_science.py  our_model_vqa_loader.py  run_llava.py
llava/model/: llava_arch.py
llava/model/language_model/: llava_llama.py
llava/model/multimodal_merger/: builder.py
llava/model/multimodal_router/: builder.py
llava/train/: train.py
lmms-eval/: README.md
lmms-eval/lmms_eval/: __main__.py  evaluator.py
lmms-eval/lmms_eval/models/: llava.py
lmms-eval/lmms_eval/tasks/mmbench/: mmbench_cc.yaml
scripts/: zero3.json
scripts/avg_llava/: stage3.sh  stage4.sh
scripts/v1_5/: finetune.sh  finetune_lora.sh  finetune_task.sh  finetune_task_lora.sh
scripts/v1_5/eval/: gqa.sh  llavabench.sh  mmbench.sh  mmbench_cn.sh  mme-llava-next.sh  mmvet.sh  pope.sh  qbench.sh  qbench_zh.sh  seed.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
